--- a/LarvalChem.Rmd
+++ b/LarvalChem.Rmd
@@ -16,10 +16,12 @@ It should also be remembered that this analysis will ultimately have both elemen
 
 ```{r, "Install Packages and Set Global Options", echo=FALSE, warning=FALSE, message=FALSE}
 library(knitr)
+library(maps)
 library(sparcl)
 library(ape)
 library(phytools)
 library(psych)
+
 opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
 ```
 
@@ -37,70 +39,7 @@ names(df)[names(df) == 'Distance.to.Angle.Crossing..m.'] <- 'distAC'
 names(df)[names(df) == 'LarvalRecords.LarvaID'] <- 'LarvaID'
 ```
 
-#Including DC13, D15N and Mean Otolith Length
-## Analysis Based on raw Variables
-
-```{r, "Cluster Analysis Based on raw Variables with ID and mean OL"}
-# Pare Down to what the Variables needed for clustering
-df <- subset(df, YearOnly == 2013, select = c(LarvaID,Site.Name,meanOL,Delta13C,Delta15N))
-rownames(df) <- df$LarvaID
-df<-subset(df, select = -LarvaID)
-
-# Pare down records to those with delta 13 C values. ie:reduce rows 
-df <- subset(df, !is.na(Delta13C))
-
-#df<-subset(df, Site.Name != "Bullen Range")
-
-#Create Cluster
-distxy <- dist(df)
-hClusters <- hclust(distxy)
-
-#Basic Plot with 
-plot(hClusters,labels=(df$Site.Name), hang = -1)
-#and with larvaID
-plot(hClusters,labels=(df$row.names), hang = -1)
-
-# colors the leaves of a dendrogram
-y = cutree(hClusters, 12)
-ColorDendrogram(hClusters, y = y, labels=df$Site.Name, main = "Nests", branchlength = 3)
-
-# load code of A2R function
-source("http://addictedtor.free.fr/packages/A2R/lastVersion/R/code.R")
-# colored dendrogram
-op = par(bg = "#EFEFEF")
-A2Rplot(hClusters, k = 12, boxes = FALSE, col.up = "gray50")
-
-##Heatmap
-set.seed(143)
-##Remove non-numerics for matrix construction as Heatmap requires
-df <- subset(df, select = c(meanOL,Delta13C,Delta15N))
-dataMatrix<-as.matrix(df)
-heatmap(dataMatrix)
- 
-##MDS
-d <- dist(df) # euclidean distances between the rows
-fit <- cmdscale(d,eig=TRUE, k=2) # k is the number of dim
-#fit # view results
-
-# plot solution 
-x <- fit$points[,1]
-y <- fit$points[,2]
-
-plot(x, y, xlab="Coordinate 1", ylab="Coordinate 2",main="Metric  MDS",  type="n")
-text(x, y, labels = row.names(df), cex=.7)
-
-
-#K means test run
-kmeansObj <- kmeans(df,centers=10)
-names(kmeansObj)
-
-par(mar=rep(0.2,4))
-plot(df,col=kmeansObj$cluster,pch=19,cex=2)
-plot(kmeansObj$centers,col=1:10,pch=3,cex=3,lwd=3)
-```
-In this case there are `r nrow(df)` rows of larvae  `r row.names(df)`  and `r ncol(df)` variables `r names(df)` in the dataframe.
-
-##Cluster Analysis Based on Standardised Variables (Milligan and Cooper 1988) 
+#Including DC13, D15N and Mean Otolith Length aka Mummies.
 
 In this case I have standardised the variables iaw Milligan et al 1988, (value/range) which gives more accurate assignation to clusters under a variety of conditions.
 
@@ -127,21 +66,19 @@ df$sDelta15N<-df$Delta15N/(max(df$Delta15N) - min(df$Delta15N))
 
 df<-subset(df, select = c(Site.Name,smeanOL,sDelta13C,sDelta15N))
 
-#df<-subset(df, Site.Name != "Bullen Range")
-
 #Create Cluster
 distxy <- dist(df)
 hClusters <- hclust(distxy)
 
 #Basic Plot with 
-plot(hClusters,labels=(df$Site.Name), hang = -1)
+plot(hClusters,labels=(df$Site.Name), hang = -1, main="Mummy")
 #and with larvaID
-plot(hClusters,labels=(df$row.names), hang = -1)
+plot(hClusters,labels=(df$row.names), hang = -1, main="Mummy")
 
    
 # colors the leaves of a dendrogram
 y = cutree(hClusters, 12)
-ColorDendrogram(hClusters, y = y, labels=df$Site.Name, main = "Nests", branchlength = 3)
+ColorDendrogram(hClusters, y = y, labels=df$Site.Name, main = "Mummy", branchlength = 3)
 
 #########
 # load code of A2R function
@@ -173,95 +110,14 @@ text(x, y, labels = row.names(df), cex=.7)
 
 In this case there are `r nrow(df)` rows ( `r row.names(df)` ) and `r ncol(df)` columns (`r names(df)`) in the dataframe.
 
-#This Time the Analysis Includes a estimate of Nest Location based on dispersal days and capture location
+#This Time the Analysis Includes a estimate of Nest Location based on available dispersal days and capture location
 
-This analysis includes an 'arbitrary' nest location calculation based on age of the larva as determined from otolith length, the time it is likely to have had available for dispersal (age - 7), and distance above the capture site calculated at 300 metres movement per day. The formula in r is as follows:
+This analysis includes an 'arbitrary' nest location calculation based on age of the larva as determined from otolith length, the time it is likely to have had available for dispersal (age - 7 days), and distance above the capture site calculated at 300 metres movement per day. The formula in r is as follows:
 
-```{r, eval=FALSE}
+```{r, echo =TRUE, eval=FALSE}
 #Create proxy Nest site variable called 'nest'.
 df$nest<-df$distAC-(df$OLEstimateAge-7)*300
 ```
-
-##Cluster Analysis Based on raw Variables 
-
-```{r echo=FALSE, "Base Work including a nest site estimate"}
-
-# install.packages('sparcl')
-library(sparcl)
-library(ape)
-library(phytools)
-library(psych)
-
-qslAllLarvaInfo <- read.csv("C:/Users/s428825/Google Drive/PhD Data Files/Analyses/CNtrial/qslAllLarvaInfo.csv")
-#Start with base data
-df<-data.frame(qslAllLarvaInfo)
-
-#Rename a few long variable names, mean otolith length and distance to AC for example. 
-names(df)[names(df) == 'Mean.Otolith.Length.is.in.Millimetres.for.comparison.with.Adults'] <- 'meanOL'
-names(df)[names(df) == 'Distance.to.Angle.Crossing..m.'] <- 'distAC'
-names(df)[names(df) == 'LarvalRecords.LarvaID'] <- 'LarvaID'
-
-# Pare Down to what the Variables needed for clustering
-df <- subset(df, YearOnly == 2013, select = c(LarvaID,Site.Name,OLEstimateAge,distAC,Delta13C,Delta15N))
-
-#Create proxtNest site variable.
-df$nest<-df$distAC-(df$OLEstimateAge-7)*300
-
-rownames(df) <- df$LarvaID
-df<-subset(df, select = -LarvaID)
-
-# Pare down records to those with delta 13 C values. ie:reduce rows 
-df <- subset(df, !is.na(Delta13C))
-
-#Create Cluster
-distxy <- dist(df)
-hClusters <- hclust(distxy)
-
-#Basic Plot with 
-plot(hClusters,labels=(df$Site.Name), hang = -1)
-#and with larvaID
-plot(hClusters,labels=(df$row.names), hang = -1)
-
-# colors the leaves of a dendrogram
-y = cutree(hClusters, 12)
-ColorDendrogram(hClusters, y = y, labels=df$Site.Name, main = "Nests", branchlength = 3)
-
-#########
-# load code of A2R function
-source("http://addictedtor.free.fr/packages/A2R/lastVersion/R/code.R")
-# colored dendrogram
-op = par(bg = "#EFEFEF")
-A2Rplot(hClusters, k = 12, boxes = FALSE, col.up = "gray50")
-
-##Heatmap
-set.seed(143)
-##Remove non-numerics for matrix construction as Heatmap requires
-df <- subset(df, select = c(nest,Delta13C,Delta15N))
-dataMatrix<-as.matrix(df)
-heatmap(dataMatrix)
-
-##MDS
-d <- dist(df) # euclidean distances between the rows
-fit <- cmdscale(d,eig=TRUE, k=2) # k is the number of dim
-#fit # view results
-
-# plot solution 
-x <- fit$points[,1]
-y <- fit$points[,2]
-
-plot(x, y, xlab="Coordinate 1", ylab="Coordinate 2",main="Metric  MDS",  type="n")
-text(x, y, labels = row.names(df), cex=.7)
-
-#K means test run
-kmeansObj <- kmeans(df,centers=10)
-names(kmeansObj)
-
-par(mar=rep(0.2,4))
-plot(df,col=kmeansObj$cluster,pch=19,cex=2)
-plot(kmeansObj$centers,col=1:10,pch=3,cex=3,lwd=3)
-```
-
-In this case there are `r nrow(df)` rows of larvae ( `r row.names(df)` ) and `r ncol(df)` variables (`r names(df)`) in the dataframe.
 
 ##Cluster Analysis Based on Standardised Variables (Milligan and Cooper 1988) 
 
@@ -309,7 +165,7 @@ distxy <- dist(df)
 hClusters <- hclust(distxy)
 
 #Basic Plot with 
-plot(hClusters,labels=(df$Site.Name), hang = -1)
+plot(hClusters,labels=(df$Site.Name), hang = -1, main = "Chemistry and Nest Clusters")
 #and with larvaID
 plot(hClusters,labels=(df$row.names), hang = -1, main = "Chemistry and Nest Clusters")
 
@@ -348,4 +204,6 @@ rm(x); rm(y); rm(d); rm(fit); rm(distxy); rm(op)#cleanup temporary variables
 ```
 
 In this case there are `r nrow(df)` rows (`r row.names(df)`)  and `r ncol(df)` columns (`r names(df)`) in the dataframe.
+
+
 
